<resources>
    <string name="app_name">数字输入法</string>
    <string name="key_0">0</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_up">↑</string>
    <string name="key_down">↓</string>
    <string name="key_left">←</string>
    <string name="key_right">→</string>
    <string name="key_del">Del</string>
    <string name="key_p">.</string>
    <string name="word_separators">\u0020.,;:!?\n()[]*&amp;@{}/&lt;&gt;_+=|&quot;</string>
</resources>
